--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>756291793040-7r32ftjs4kqalvearrbg1o9phi5kopbg.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.756291793040-7r32ftjs4kqalvearrbg1o9phi5kopbg</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCGYkQF3uo-Iekv_KZlh6mUrL-sOHd0oIQ</string>
 	<key>GCM_SENDER_ID</key>
