--- a/BettorOdds/Info.plist
+++ b/BettorOdds/Info.plist
@@ -80,6 +80,19 @@
         <string>armv7</string>
     </array>
 
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>GoogleSignIn</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.756291793040-7r32ftjs4kqalvearrbg1o9phi5kopbg</string>
+            </array>
+        </dict>
+    </array>
+
+
     <!-- Supported Interface Orientations -->
     <key>UISupportedInterfaceOrientations</key>
     <array>
